--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
-    "name": "peter-bot",
-    "version": "1.0.0",
-    "description": "Peter Bot",
-    "main": "bot.js",
-    "author": "i bims der peter",
-    "dependencies": {
-        "discord.io": "^2.5.3",
-        "winston": "^3.2.1"
-    }
+  "name": "testbot",
+  "version": "1.0.0",
+  "description": "bot for testing purposes",
+  "main": "./dist/index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "@types/node": "^12.0.7",
+    "discord.js": "^11.5.1",
+    "winston": "^3.2.1"
+  }
 }
